src/test/ui/const-generics/min_const_generics/default_function_param.stderr
error: expected one of `!`, `(`, `+`, `,`, `::`, `<`, or `>`, found `=`
  --> $DIR/default_function_param.rs:3:26
   |
LL | fn foo<const SIZE: usize = 5>() {}
   |                          ^ expected one of 7 possible tokens

error: aborting due to previous error

