src/test/ui/const-generics/min_const_generics/default_function_param.rs
fn foo<const SIZE: usize = 5>() {}
//~^ ERROR default values for const generic parameters are experimental

fn main() {}
